Bug 488572 - Notification for "Network Error: Pending retry" overlaps content
Summary: Notification for "Network Error: Pending retry" overlaps content
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.05.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-16 09:36 UTC by Louis Moureaux
Modified: 2024-10-26 12:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the popups (in French) (29.77 KB, image/png)
2024-06-16 09:36 UTC, Louis Moureaux
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Louis Moureaux 2024-06-16 09:36:36 UTC
Created attachment 170547 [details]
Screenshot showing the popups (in French)

SUMMARY

When the network is not accessible (eg captive portal), NeoChat pops up a notification at the bottom of the window. This notification has multiple issues:

* It is shown 5 times and new notifications keep popping up every second, discarding the 4th one with an animation
* It is not anchored to any GUI element and floats in a seemingly random location (until you realize it's the bottom center of the window)
* The notifications overlap with messages and the compose area

STEPS TO REPRODUCE
1. Connect to a WiFi network with a captive portal preventing NeoChat from accessing the web (in a hotel, train, station, airport, ...)
2. Open NeoChat
3. Watch for notifications

OBSERVED RESULT
As described above

EXPECTED RESULT
A non-intrusive banner is shown explaining that NeoChat could not connect and is retrying (or allowing the user to retry manually)

SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.5.0-35-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-10-26 10:30:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1956
Comment 2 James Graham 2024-10-26 12:28:32 UTC
Git commit 5642f3416a12a558e510fe03f4604c683329ae31 by James Graham.
Committed on 26/10/2024 at 12:28.
Pushed by nvrwhere into branch 'master'.

Pester Network Error Messages

Stop sending a pester message using showPassiveNotification every time there is a network error. There is already a proper handling with `isOnline` in `NeochatConnection`. This just causes issues overlapping content.

M  +0    -3    src/controller.cpp

https://invent.kde.org/network/neochat/-/commit/5642f3416a12a558e510fe03f4604c683329ae31